overflow issue fix

--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -184,6 +184,7 @@
     color: white;
     transition: all 0.5s;
     overflow-y: hidden;
+    overflow: hidden;
 }
 
 pre{
